PyMaker/datas/object2/RawHTML/i1001/Python_DOC_referPages.beginner-with-python.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/739993/how-can-i-get-a-list-of-locally-installed-python-modules">How can I get a list of locally installed Python modules?</a>
<span class="question-originals-answer-count">
                    23 answers
                </span>
</li>
</ul>
</div>
<p>I am fairly new with python, as I am learning on my own I encounter some minimal errors a students would mostly ask their professors but I dont have the luxury to do that right now so I am here. 
I want to check if Tkinter is installed using command on my Pc BUT I get a syntax error message, can someone help me with that? 
I typed -&gt; <code>python -m tkinter</code></p>
<pre><code>--------------------------------
&gt;&gt; python -m tkinter
  File "&lt;stdin&gt;", line 1
    python -m tkinter
                    ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>If you want to have a quick one-liner, you can run the following from any command line:</p>
<p><code>python -c "import tkinter"</code></p>
<p>It will either output an error if it doesn't exist, or nothing if the module exists. For example, I can see this:</p>
<pre><code>$ python -c "import tkinter"
Traceback (most recent call last):
  File "&lt;string&gt;", line 1, in &lt;module&gt;
ImportError: No module named tkinter
$ python -c "import array"
$
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>That command is for shell enviroment.</p>
<p>Inside python interpreter you can check it by </p>
<pre><code>import tkinter
</code></pre>
</div>
<span class="comment-copy">We (at least not I) are not professors. SO does not aim to tutor languages - you should look for tutorials: <a href="https://docs.python.org/3/tutorial/" rel="nofollow noreferrer">docs.python.org/3/tutorial</a></span>
<span class="comment-copy">thats because you are trying to run the command as a python code, just type the command in the console without starting python</span>
